package id.isato.emina.utils

object TestTags {

    const val ANIME_DETAIL = "AnimeDetail"
    const val ANIME_LIST = "AnimeList"

    const val ERROR = "Error"

    const val LOADING = "Loading"

    const val PROFILE = "Profile"

}