<resources>
    <string name="app_name">Emina</string>\

    <string name="add_favorite">Add to Favorite</string>

    <string name="back">Back</string>

    <string name="empty_list">Your favorite anime is empty.</string>

    <string name="menu_favorite">Favorite</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <string name="search_anime">Anime</string>
</resources>